<resources>
    <string name="app_name">FindaJob</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="aboutUs">AboutUs</string>
    <string name="ilanlar">Job Postings</string>
    <string name="ilanlardetay">Posting Details</string>
    <string name="sharead">Share Ad</string>
    <string name="myfavoriteads">My Favorite Postings</string>
    <string name="myapplications">My Job Postings</string>
    <string name="title_activity_ilanlarim_navigation">MainActivity</string>
    <string name="title_home">My Job Postings Details</string>
    <string name="title_dashboard">asdfg</string>
    <string name="title_notifications">Recourse</string>


</resources>