<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"></item>
    <item
        android:id="@+id/menuIlanlar"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/ilanlar"></item>

    <item
        android:id="@+id/menuilanlarim"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/myapplications"></item>
    <item
        android:id="@+id/menuilanPaylas"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/sharead"></item>


    <item
        android:id="@+id/menuBasvurdugumIlanlar"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/basvurdugumilanlar"></item>

    <item
        android:id="@+id/menucikis"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
        android:title="@string/myfavoriteads"></item>


</menu>


